# cfgbumpversion

./: .bumpversion.cfg  .gitignore  README.md  README.rst  pyproject.toml
src/fake_project/: convert_pipenv_poetry.py
