[tool.poetry]
name = "incolumepy.cfgbumpversion"
version = "0.4.2"
description = ""
authors = ["britodfbr <britodfbr@gmail.com>"]
packages = [
    { include = "incolumepy", from = "src" },
]
include = ["README.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/incolumepy/cfgbumpversion/issues"
"Home Page" = "https://github.com/incolumepy/cfgbumpversion/"
"Oficial" = "https://github.com/incolumepy/cfgbumpversion/"
"Source" = "https://github.com/incolumepy/cfgbumpversion/"
"Documentation" = "https://github.com/incolumepy/cfgbumpversion/wiki"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
